RESOLVED FIXED285925
Early return instead of terminating web process when navigating destroyed frames
https://bugs.webkit.org/show_bug.cgi?id=285925
Summary Early return instead of terminating web process when navigating destroyed frames
Alex Christensen
Reported 2025-01-14 12:36:35 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-14 12:36:46 PST
Alex Christensen
Comment 2 2025-01-14 12:39:15 PST
EWS
Comment 3 2025-01-14 13:16:58 PST
Committed 288887@main (b82e90eb3b25): <https://commits.webkit.org/288887@main> Reviewed commits have been landed. Closing PR #39007 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.